# VanillaPerceptionPlanningDemos

./: .gitignore  LICENSE  README.md
VanillaLoopClosure/: README.md  VanillaLoopClosure.ipynb  environment.yml
VanillaSLAM/: README.md  data_collector.py  environment.yaml  initial_estimator.py  intermediate_results_iter_0.json  intermediate_results_iter_1.json  intermediate_results_iter_2.json  intermediate_results_iter_3.json  intermediate_results_iter_4.json  intermediate_results_iter_5.json  iterations_visualizer.py  visualizer.py
VanillaSLAM/optimizer/: CMakeLists.txt  lidar_slam_optimized.json  optimized_results.json  optimizer.cc
VanillaSfM/: README.md  data_collector.py  initial_estimator.py  visualize_results.py
VanillaSfM/bundle_adjuster/: CMakeLists.txt  bundle_adjuster.cc
